editor/libeditor/HTMLEditorEventListener.cpp
@@ -217,9 +217,14 @@ HTMLEditorEventListener::MouseClick(nsIDOMMouseEvent* aMouseEvent)
   NS_ENSURE_TRUE(target, NS_ERROR_NULL_POINTER);
   nsCOMPtr<nsIDOMElement> element = do_QueryInterface(target);
 
-  HTMLEditor* htmlEditor = mEditorBase->AsHTMLEditor();
+  RefPtr<HTMLEditor> htmlEditor = mEditorBase->AsHTMLEditor();
   MOZ_ASSERT(htmlEditor);
   htmlEditor->DoInlineTableEditingAction(element);
+  // DoInlineTableEditingAction might cause reframe
+  // Editor is destroyed.
+  if (htmlEditor->Destroyed()) {
+    return NS_OK;
+  }
 
   return EditorEventListener::MouseClick(aMouseEvent);
 }
